--- a/experiments/self-hosted/readme.org
+++ b/experiments/self-hosted/readme.org
@@ -10,6 +10,15 @@ Bootstrapping is going to be fun.
 
 * Reading List
    - [ ] Lambda the Ultimate Declarative — Steele 1976
+     | It is not the names which are important to the computation, but rather
+     | the quantities; hence it is appropriate to focus on the quantities and
+     | think of them as having one or more names over time, rather than thinking
+     | of a name as having one or more values over time.
+
+     From section 1.3. I don't know if I've ever seen that point of view so
+     clearly stated. And in 1976...
+   - [ ] Lambda: The Ultimate Imperative
+   - [ ] Actors: A Model of Concurrent Computation in Distributed Systems
    - [X] Intensions and Extensions in a Reflective Tower, Danvy & Malmkjær 1988
    - [X] The Mystery of the Tower Revealed, Wand & Friedman 1988
    - [X] The Theory of Fexprs is Trivial, Wand 1998
@@ -84,6 +93,8 @@ Bootstrapping is going to be fun.
 
     That is the most understated attestation of excellence I've ever heard. I
     want to see it in action. Cool is only useful to draw the crowd.
+  - Microthreading
+    Not a language per se, but an interesting idea.
 * Questions
 ** [2022-09-28 Wed 12:26] def, intern, and purity
    If there are no side effects, how does one implement `def`?
@@ -353,3 +364,41 @@ Bootstrapping is going to be fun.
    when performance is the main concern.
 
    But I'm getting way ahead of myself.
+** [2022-10-18 Tue 10:25] Microthreading
+    Cf http://subdivi.de/~helmut/libmuth/tutorial.html,
+    https://en.wikipedia.org/wiki/Micro-thread_(multi-core)
+
+    I'm finding a glut of resources on concurrency, and basically nothing on
+    parallelism. Continuations can build any concurrent construct (as far as
+    I've seen mentioned), but what about constructs (either theory or patterns)
+    to run many continuations in parralel?
+
+    There are resources like Goetz's book on concurrency in java, that contain a
+    lot of practical advice on how to build reliable software based on an
+    adversarial thread model.
+
+    But not a lot on new models. Data parallelism, task parallelism, actors,
+    CSP,... that's pretty much it.
+
+    Microthreads, as above (I have no idea what libmuth was, but the tutorial is
+    short and well written) are just functions intended to be run in
+    parallel. But the model is still threading, with semaphores and the
+    rest. The main innovation in the Cell archtectures mentioned is extending
+    the ISA to make microtaskswitching more efficient. That might be an
+    improvement of the von Neumann bottleneck, but our current hardware is still
+    going to dead end with the scorpion.
+
+    But there's nothing here that wasn't in erlang. Run one scheduler per core
+    and keep a queue of coroutines (or whatever you want to call them). It seems
+    like the state of the art hasn't moved since I was born. Or it might be
+    better to say it's been going in circles.
+
+    I can squeeze what I'm building into these paradigms: Program execution
+    generates a stream of thunks which get enqueued and multiple schedulers (one
+    per core) pop thunks off the queue and run them. Data dependencies are
+    generally sorted out because you don't have a thunk until you have all the
+    data. One thunk can generate data and pass it on to a continuation which
+    uses it to make (and enqueue) another thunk.
+
+    It's not very pretty, but I think it works. Implementation will tell where
+    the weakest parts of the hand waving lie.
