--- a/experiments/self-hosted/readme.org
+++ b/experiments/self-hosted/readme.org
@@ -10,13 +10,42 @@ Bootstrapping is going to be fun.
 
 * Reading List
    - [ ] Lambda the Ultimate Declarative — Steele 1976
-     | It is not the names which are important to the computation, but rather
-     | the quantities; hence it is appropriate to focus on the quantities and
-     | think of them as having one or more names over time, rather than thinking
-     | of a name as having one or more values over time.
+     | It is not the names which are important to the computation, but rather    |
+     | the quantities; hence it is appropriate to focus on the quantities and    |
+     | think of them as having one or more names over time, rather than thinking |
+     | of a name as having one or more values over time.                         |
 
      From section 1.3. I don't know if I've ever seen that point of view so
      clearly stated. And in 1976...
+
+     The argument by induction (section 1.5) that no lambda expression ever
+     actually pops the control stack strikes me as profound.
+
+     Only primitives ever pop return addresses off the control stack in a
+     functionally implemented language. To convert that language to
+     continuation passing style, it suffices to convert just the
+     primitives. Except for those lambdas that now want to manipulate control
+     flow...
+
+     So we only need to focus on the primitives. But what are the primitives?
+     Primitives are *other interpreters* to whom we send messages. Furthermore
+     those other interpreters are defined by code and the interpreter of the
+     other interpreter's code.
+
+     This is a tower that ends up reaching down to machine code for each
+     primitive. That sounds like a lot of work, but isn't that just what
+     implementing a language is?
+
+     This focus on interpreters all the way down means that we need contracts
+     of some sort to be enforced. After all, what use is it knowing that `+` is
+     an interpreter whose code is X and whose parent interpreter is `lli`, if
+     we can't use that information to replace `+` with an interpreter whose
+     code is JIT compiled and optimised? Or with code that can be passed to a
+     parent interpreter on a different platform which doesn't support the
+     current parent?
+
+     I truly feel like I'm making progress, but this is certainly taking me in
+     a spiral.
    - [ ] Lambda: The Ultimate Imperative
    - [ ] Actors: A Model of Concurrent Computation in Distributed Systems
    - [X] Intensions and Extensions in a Reflective Tower, Danvy & Malmkjær 1988
