--- a/experiments/bootstrap/readme.org
+++ b/experiments/bootstrap/readme.org
@@ -3,6 +3,11 @@ know what I want the language to do.
 
 #+TITLE: An Attempt to Implement
 
+* Use
+  The file =src/repl.jl= contains the initial interpreter entry point.
+
+  Running =repl(initenv)= will get you a *very* bare repl that will read
+  commands until EOF (ctrl-d).
 * The Language
 ** No Side Effects
    This isn't true of the program as a whole, obviously, but it is true of
@@ -18,11 +23,11 @@ know what I want the language to do.
 
    A function takes arguments — possibly including streams — and returns what
    I'm calling a cable. A cable is a bundle of named streams with a special,
-   unnamed cable which corresponds the the "normal return" path of a function.
+   unnamed stream which corresponds the the "normal return" of a function.
 
    The building block of all synchronisation is that messages emitted on a
    function's output streams come into existence at a point in time which is
-   strictly later than the messages consumed by the function (either messages
+   strictly later than the messages consumed by that function (either messages
    passed in as arguments, or values read off of streams that were passed
    in). That's it: consistency exists at a single point in time and space and
    nowhere else. Everything bigger requires some method of consensus.
@@ -30,7 +35,8 @@ know what I want the language to do.
    A function can emit zero or more messages on any number of streams, but only
    from tail position. Thus functions effectively "return" a map from streams to
    lists of messages, and the runtime hooks those messages up to the appropriate
-   queues based on the message passing topology which is the program code.
+   queues based on the message passing topology which is our version of the call
+   graph.
 
    Additionally a function may call itself recursively and emit messages at the
    same time. The semantics of such a (recur (emit ... expression are that
@@ -39,12 +45,13 @@ know what I want the language to do.
 
    I think of these "recur and emit" tail calls as a shorthand for emitting to
    streams that loop back into the emitting function. Such cycles from a node to
-   itself have proven difficult to model except via recursion.
+   itself have proven difficult to model except via recursion. And they're the
+   only way to model changing state over time without any reference types.
 
    To deal with IO, there must be streams that connect to the outside
    world. Such streams include stdin, stdout, etc. as well as a function
    http/request which takes an argument and returns a cable whose default stream
-   might emit a response, or whose error stream might emit an error. And so on.
+   might emit a response, or whose error stream might emit an error, etc..
 
    There is no =put!= in the core language, so how does one write to stdout? The
    answer is =wire= (name provisional) which connects one stream to another such
@@ -59,6 +66,8 @@ know what I want the language to do.
    The language must have an escape valve on the pattern of rust's =unsafe=
    which allows new effects to be created but isolates them from the rest of the
    program and calls attention to their dangerous character.
+
+   But that's a work in progress within a work in progress.
 ** Stream processing
    Iteration is not the correct primitive to talk about stream processing.
 
