--- a/experiments/bootstrap/readme.org
+++ b/experiments/bootstrap/readme.org
@@ -11,15 +11,17 @@ know what I want the language to do.
 
 * Todo
   In no particular order
-  - [ ] read strings
+  - [ ] Support comments in reader
   - [ ] sets
   - [ ] check symbol definition at read time
     This is to push errors back to read time from run time.
 
     They're the same right now, but that won't always be the case.
   - [ ] streams
-    We have queues, we just need to define cable construction, `wire, and
-    `emit`.
+    We have queues, we just need to define cable construction, =wire=, and
+    =emit=.
+  - [ ] destructuring
+    useful by itself, obviously, but =match= is much less useful without it.
   - [ ] match
     Unification based pattern matching for messages on cables.
   - [ ] Simple test runner
