--- a/experiments/bootstrap/readme.org
+++ b/experiments/bootstrap/readme.org
@@ -109,6 +109,57 @@ know what I want the language to do.
     "unsafe" key to allow new interpreters into this trusted zone. Then we'll
     need to hand write and verify a subset from which we can build the
     sandboxing for general interpreters.
+* The Interpreters
+  If we're going to work with interpreters all the way down, then we'll need to
+  define a minimal set with which to have a useful language.
+** eval
+   This is pretty straight forward.
+** Constructors
+   ^Macro, ^Fn, tagged types.
+** Value Manipulation
+   All of the protocols of lists, vectors, maps, and sets are primitive
+   interpreters, just as =cons= was a necessary special form in lisp. Note that
+   contructors for values are not primitive, since list, map, et al. are just
+   implemented by (reduce conj ...).
+** Arithmetic
+   You can't compute much without arithmetic. We only need 3 arithmetic
+   primitives, call them =compute=, =simplify=, and =approximate=.
+
+   =compute= takes an sexp like (+ 7 9) and returns a structure of the form
+   ^Sum [7 9].
+
+   =approximate= takes a compute structure and an integer N, and returns a
+   rational number within 10^{-N} of the value of the compute structure.
+
+   =simplify= uses arithmetic identities and search heuristices to simplify
+   expressions. E.g. ^Sum [7 9] => 16, (derivative (fn [x] (* x x)) 'x) => (fn [x]
+   (* 2 x)), etc.  We can extend this with trignometry, calculus, various
+   algrebras, etc.
+
+   Think of =simplify= as symbolic math, and =approximate= as numerics.
+** String Manipulation
+   This should be reducible to list manipulation, but at the very least we'll
+   need primitives for encoding/decoding ascii, utf, etc..
+
+   Honestly, I still think that strings should be a loose tree structure. That
+   way going up from sentences, to paragraphs, is symmetrical to going down to
+   characters and partial code points. Something like RRB tries or Fibonnaci
+   heaps are what I'm going for.
+
+   We can probably get better memory packing by intelligently encoding subtrees
+   and thus make up for the "not a single linear slice of addresses" issue.
+* The Runtime
+  In theory =emit= sends a message directly to a channel (and thence to any
+  listeners on that channel).
+
+  In reality, we need to map interpretation of messages to hardware in a dynamic
+  fashion, so emission is mediated by queues and a scheduler.
+
+  What is the scheduler? Is it useful to think of it as an interpreter? It is a
+  meta interpreter of sorts which sees the sending of messages as messages in
+  their own right. So it's a step up the reflective tower; a higher order
+  process, like a message passing macro.
+
 
 * The Language
 ** No Side Effects
